# TFG

./: .gitmodules  GEMINI.md  LICENSE  malot_glue.py  pyproject.toml
tests/: basic_test.lean
